# HomeScoutAgent

./: .env.example  .gitignore  README.md  pyproject.toml  run_daily_agent.bat  run_daily_agent.command  run_daily_agent.sh  stop_daily_agent.bat  stop_daily_agent.command
.github/workflows/: daily-real-estate-agent.yml
agent/: __init__.py  config.py  emailer.py  fetcher.py  llm_scorer.py  main.py  scoring.py  tracker.py
homeharvest/: utils.py
homeharvest/core/scrapers/: __init__.py  models.py
homeharvest/core/scrapers/realtor/: processors.py  queries.py
tests/: test_agent.py  test_realtor.py
